[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/hp_bar_over.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/ammo_bar_progress.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/hp_bar_progress.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/droid-sans/DroidSans.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 5 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -78.0
margin_right = 297.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 282.0
margin_bottom = 68.0
custom_constants/separation = 10

[node name="HBHealth" type="HBoxContainer" parent="Panel/MarginContainer/VB"]
margin_right = 272.0
margin_bottom = 20.0

[node name="Title" type="Label" parent="Panel/MarginContainer/VB/HBHealth"]
margin_top = 1.0
margin_right = 22.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "HP:"

[node name="HealthBar" type="TextureProgress" parent="Panel/MarginContainer/VB/HBHealth"]
margin_left = 26.0
margin_right = 230.0
margin_bottom = 20.0
rect_min_size = Vector2( 204, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
value = 100.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Panel/MarginContainer/VB/HBHealth/HealthBar"]

[node name="HealthValue" type="Label" parent="Panel/MarginContainer/VB/HBHealth"]
margin_left = 234.0
margin_top = 1.0
margin_right = 260.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "5/10"

[node name="HBAmmo" type="HBoxContainer" parent="Panel/MarginContainer/VB"]
margin_top = 30.0
margin_right = 272.0
margin_bottom = 47.0

[node name="Title" type="Label" parent="Panel/MarginContainer/VB/HBAmmo"]
margin_right = 47.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Ammo:"

[node name="AmmoBar" type="TextureProgress" parent="Panel/MarginContainer/VB/HBAmmo"]
margin_left = 51.0
margin_right = 231.0
margin_bottom = 15.0
rect_min_size = Vector2( 180, 15 )
size_flags_horizontal = 0
size_flags_vertical = 0
step = 0.1
value = 100.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Panel/MarginContainer/VB/HBAmmo/AmmoBar"]

[node name="AmmoValue" type="Label" parent="Panel/MarginContainer/VB/HBAmmo"]
margin_left = 235.0
margin_right = 261.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "8/12"
